# bevy_sim

./: Cargo.toml  README.md
crates/bevy_client/: Cargo.toml
crates/bevy_client/src/: main.rs
crates/bevy_client/src/plugins/: debug_ui.rs  economy.rs  globe_map.rs  input.rs  logistics.rs  map.rs  mod.rs  recipe_graph.rs  world_economy.rs  world_map.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: facility.rs  graph.rs  ids.rs  inventory.rs  ledger.rs  lib.rs  logistics.rs  recipe.rs  tests.rs  world.rs
crates/sim_data/: Cargo.toml
crates/sim_data/src/: lib.rs
data/canonical/v0/: commodities.json  facilities.json  recipes.json  regions.json  scenarios.json  world_regions.json  world_resource_profiles.json  world_scenarios.json
docs/: canonical_schema.md  dev_setup.md  workflow.md
tools/python/: prepare_world_geometry.py
tools/python/fixtures/: ne_110m_admin_0_countries_sample.json
