[workspace]
members = [
    "crates/bevy_client",
    "crates/sim_core",
    "crates/sim_data",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/joro/bevy_sim"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bevy = { version = "0.18.1", features = ["pan_camera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sim_core = { path = "crates/sim_core" }
sim_data = { path = "crates/sim_data" }
thiserror = "2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

